# rust-web-tournament

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: api.rs  app.rs  lib.rs  route.rs  types.rs
src/component/: mod.rs  modal.rs  round.rs  round_match.rs  tournament_card.rs
src/page/: main.rs  mod.rs  tournament.rs
static/: index.html
static/products/: tournament.json
