[package]
name = "rust_tournament"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
gloo = "0.6"
js-sys = "0.3"
serde_json = "1"
serde={version="1.0", features=["derive"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlCollection",
  "HtmlSelectElement",
  "HtmlInputElement",
]